--- a/lib/premiere_ecoute_web/components/layouts/root.html.heex
+++ b/lib/premiere_ecoute_web/components/layouts/root.html.heex
@@ -31,7 +31,7 @@
   </head>
   <body>
     <ul class="menu menu-horizontal w-full relative z-10 flex items-center gap-4 px-4 sm:px-6 lg:px-8 justify-end">
-      <%= if @current_scope && @current_scope.user do %>
+      <%= if @current_scope && Map.get(@current_scope, :user) do %>
         <li>
           {@current_scope.user.email}
         </li>
